# Ds

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
apps/cgdemo/: CMakeLists.txt
apps/cgdemo/reader/: ErrorHandler.cpp  FileBuffer.cpp  ReaderBase.cpp  SceneReader.cpp
apps/cgvisdemo/: CMakeLists.txt
apps/template/: CMakeLists.txt
cg/: CMakeLists.txt
cg/include/core/: AllocableObject.h  Flags.h  SharedObject.h
cg/include/geometry/: BVH.h
cg/include/graph/: SceneWindow.h
cg/include/graphics/: AssetFolder.h  Color.h  GLFramebuffer.h  GLProgram.h  GLRenderer.h  GLWindow.h  Image.h  Material.h  SceneWindowBase.h
cg/include/math/: Matrix3x3.h  Matrix4x4.h  Quaternion.h  Real.h  Vector2.h  Vector3.h  Vector4.h
cg/src/geometry/: BVH.cpp  MeshSweeper.cpp  TriangleMesh.cpp
cg/src/graph/: CameraProxy.cpp  SceneWindow.cpp
cg/src/graphics/: Application.cpp  Assets.cpp  Camera.cpp  GLGraphics2.cpp  GLProgram.cpp  GLRenderer.cpp  GLWindow.cpp  SceneWindowBase.cpp
cg/src/utils/: MeshReader.cpp
cgcuda/: CMakeLists.txt
cgcuda/include/: CUDAHelper.h
cgvis/: CMakeLists.txt
cgvis/include/: Cell.h  DataArray.h
